overflow  fix

--- a/frontend_qgassp/src/css/generate.css
+++ b/frontend_qgassp/src/css/generate.css
@@ -1,5 +1,5 @@
 .generate-report{
-    overflow: scroll;
+    overflow: none;
     min-height: 100vh;
 }
 
